--- a/package.json
+++ b/package.json
@@ -12,10 +12,19 @@
     "autoprefixer": "10.4.15",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "next": "13.4.19",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-router-dom": "^6.16.0",
+    "sort-by": "^1.2.0",
     "tailwindcss": "3.3.3"
+  },
+  "devDependencies": {
+    "@heroicons/react": "^2.0.18",
+    "aos": "^2.3.4",
+    "react-icons": "^4.11.0"
   }
 }
