--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@heroicons/react": "^2.0.18",
     "aos": "^2.3.4",
-    "react-icons": "^4.11.0"
+    "react-icons": "^4.11.0",
+    "react-multi-carousel": "^2.8.4"
   }
 }
