--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "formik": "^2.4.5",
+    "google-spreadsheet": "^4.1.0",
     "googleapis": "^128.0.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
